fixed alignment in apropos and partenaires

--- a/src/pages/Home/Apropos/Apropos.css
+++ b/src/pages/Home/Apropos/Apropos.css
@@ -47,8 +47,9 @@ section{
 .vid-btn{
      
     background-color: var(--color-bg-variant);
-    padding: 10px;
-    border-radius: 5px;
+    padding: 0.5vw;
+    border-radius: 0.5vw;
+    margin-top: 1vw;
     cursor: pointer;
     border: 1px solid white;
     color: white;
@@ -79,15 +80,12 @@ section{
       font-size: 1.5vw;
     }
     .vid-btn {
-      margin-top: 3em;
+      margin-top: 1em;
     }
     
     .image{
       width: 100%;
       
-  }
-  .vid-btn{
-    padding: 1px;
   }
   .icon{
     width: 10px;
