--- a/src/pages/Home/Partenaires/Partenaires.css
+++ b/src/pages/Home/Partenaires/Partenaires.css
@@ -12,6 +12,7 @@
 }
 
 .Partenaire-title {
+  padding-right: 1vw;
   margin-left: 0.5em;
   border-bottom: 0.4vw solid black;
   width: 45%;
